--- a/src/app/components/courComponents/cour-header/cour-header.component.html
+++ b/src/app/components/courComponents/cour-header/cour-header.component.html
@@ -1,1 +1,14 @@
-<p>cour-header works!</p>
+<div class="header" id="header">
+    <div class="max-width">
+            <h2 class="logo"><a href="#"><span>M</span>ajdoul <span>R</span>adouan</a></h2>
+            <ul class="menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">Portfolio</a></li>
+            </ul>
+            <ul class="menu">
+                <li><a href="#" class="logIn">Login</a></li>
+                <li><a href="#" class="creetAccount">Creer un compte</a></li>
+                <li style="margin-left:30px"><i class="fa-solid fa-user dropbtn"></i></li> 
+            </ul>
+</div>
+</div>
