--- a/src/app/components/portfolioComponents/hero-section/hero-section.component.html
+++ b/src/app/components/portfolioComponents/hero-section/hero-section.component.html
@@ -1,1 +1,17 @@
-<p>hero-section works!</p>
+<section class="heroSection" id="main">
+    <div class="max-width flex">
+        <div class="hero-content">
+            <div class="helloText">Hello, My name is </div>
+            <div class="nameText">Majdoule radounae </div>
+            <div class="descriptionText">Profisseur de l'ensseiment supprieur </div>
+            
+            <div class="btnSection">
+                <a href="#" class="contactMeBTN">Contact me<i class="fa-solid fa-message" style="margin-left: 13px;"></i></a>
+                <a href="/cour" class="seeMyCour">See my coures <i class="fa-solid fa-arrow-right" id="arrow"></i></a>
+            </div>
+        </div>
+        <div class="imageContainer">
+            <img src="./../../../../assets/heroImage1.jpg" class="heroImage"/>
+        </div>
+    </div>
+</section>
