--- a/src/app/components/portfolioComponents/portfolio-header/portfolio-header.component.html
+++ b/src/app/components/portfolioComponents/portfolio-header/portfolio-header.component.html
@@ -1,1 +1,15 @@
-<p>portfolio-header works!</p>
+<div class="header" >
+    <nav class="max-width">
+        <h2 class="logo"><a href="#"><span>M</span>ajdoul <span>R</span>adouan</a></h2>
+        <ul class="menu">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Parcours</a></li>
+            <li><a href="#">La recherche</a></li>
+            <li><a href="#">Projets</a></li>
+            <li><a href="#">Media</a></li>
+            <li><a href="#">Contacter-nous</a></li>
+            <li><a href="/cour" class="cour">COURS</a></li>
+        </ul>
+    </nav>
+</div>
