--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, 
+body { 
+    height: 100%; 
+}
+body {
+     margin: 0;
+      font-family: Roboto, "Helvetica Neue", sans-serif; 
+      font-size: 18px;
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
